// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavUser > should match snapshot in desktop view 1`] = `
<div>
  <div
    class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
    data-slot="sidebar-wrapper"
    style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
  >
    <ul
      class="flex w-full min-w-0 flex-col gap-1"
      data-sidebar="menu"
      data-slot="sidebar-menu"
    >
      <li
        class="group/menu-item relative"
        data-sidebar="menu-item"
        data-slot="sidebar-menu-item"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
          data-active="false"
          data-sidebar="menu-button"
          data-size="default"
          data-slot="dropdown-menu-trigger"
          data-state="closed"
          id="radix-«r0»"
          type="button"
        >
          <svg
            class="lucide lucide-user-round"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="8"
              r="5"
            />
            <path
              d="M20 21a8 8 0 0 0-16 0"
            />
          </svg>
          <span>
            Username
          </span>
          <svg
            class="lucide lucide-chevron-up ml-auto"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m18 15-6-6-6 6"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`NavUser > should match snapshot in mobile view 1`] = `
<div>
  <div
    class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
    data-slot="sidebar-wrapper"
    style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
  >
    <ul
      class="flex w-full min-w-0 flex-col gap-1"
      data-sidebar="menu"
      data-slot="sidebar-menu"
    >
      <li
        class="group/menu-item relative"
        data-sidebar="menu-item"
        data-slot="sidebar-menu-item"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
          data-active="false"
          data-sidebar="menu-button"
          data-size="default"
          data-slot="dropdown-menu-trigger"
          data-state="closed"
          id="radix-«r2»"
          type="button"
        >
          <svg
            class="lucide lucide-user-round"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="8"
              r="5"
            />
            <path
              d="M20 21a8 8 0 0 0-16 0"
            />
          </svg>
          <span>
            Username
          </span>
          <svg
            class="lucide lucide-chevron-up ml-auto"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m18 15-6-6-6 6"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
